Add files via upload
☄️ Moid Addon v2.0
A powerful, highly optimized extension for Meteor Client on Minecraft 1.21.4.

Welcome to the latest release of Moid Addon. This update focuses on heavy optimization, improved visuals (fades & gradients), and new bypasses for modern anti-cheats.

🆕 New Modules
🛡️ AntiResourcePack: Take back control. Automatically bypasses and blocks forced resource pack prompts from servers, preventing them from messing with your performance or visibility.

🎯 ProjectilePredictor: Predict the future. Visualizes the exact flight path of arrows, pearls, and potions, making it easier to land those cross-map shots.

🚀 Upgraded & Optimized
We've refactored the core of our most popular modules for better performance and "stealth" capabilities.

⚔️ Combat
Moid-KillAura: Massive logic overhaul. Improved target selection and optimized code for lower CPU usage during high-speed fights.

JumpMatrix: [MASSIVE UPGRADE] Complete rewrite. Added a new Merged Mode, more customization for movement, and heavy optimization for modern server checks.

🎨 Visuals & HUD
TargetHUD: Now features a high-fidelity Color Fade background. Includes a smooth health bar indicator, name list, and a real-time Inventory/Armor indicator for your target.

MoidTrails (Trails): Enhanced performance with new Chroma effects and rolling color fades. Your path has never looked this clean.

🧊 Utility & Movement
Fake-Lag: Added a Full Lag Mode specifically designed for bypassing advanced movement anti-cheats. Now includes rolling color fades to keep your HUD looking consistent.